# jogo-da-velha-html

./: LICENSE  README.md  funcoes.js  index.html  javascript.js  package-lock.json  style.css  tsconfig.json
files/: definicoes.js  funcoes.js  javascript.js  linguagem.js  sound.js  style.css
files/js/: funcoes.js  gestorImagens.js  javascript.js  linguagem.js  sound.js
files/lang/: pt-br.lang
files/ts/: funcoes.ts  gestorImagens.ts  javascript.ts  linguagem.ts  sound.ts
jogo-da-velha-html/: funcoes.js  index.html  javascript.js
servidor/: app.py  pyproject.toml
