[tool.poetry]
name = "Jogo da Velha Servidor"
version = "0.1.0"
description = "Servidor Para Gerenciar Jogo da Velha"
authors = ["maicomferre <maicomferre@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
